--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="index.css">
   <script src="index.js" />
   <script type="text/javascript" src="http://livejs.com/live.js"></script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
 </head>
 <body>
   <section id="aboveFold" class="videoHidden">
@@ -27,13 +28,7 @@
       </div>
     </div>
     <div class="videoContainer centerContainer">
-      <div class="videoInnerContainer">
-        <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-            id="vimeoFrame"
-            src=""
-            style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen
-            mozallowfullscreen allowfullscreen></iframe></div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
+      <div id="vimeoRenderBox" class="videoInnerContainer">
       </div>
     </div>
     <h1>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt</h1>
