--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt </title>
+  <title>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt</title>
   <link rel="stylesheet" href="https://use.typekit.net/kov6lrh.css">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="index.css">
-  <script src="index.js" />
-  <script type="text/javascript" src="http://livejs.com/live.js"></script>
+  <script src="index.js"></script>
   <script src="https://player.vimeo.com/api/player.js"></script>
 </head>
 <body>
@@ -31,7 +30,7 @@
       <div id="vimeoRenderBox" class="videoInnerContainer">
       </div>
     </div>
-    <h1>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt</h1>
+    <h1>Fine Print: A Series of Lecture Demonstrations on Student Loan&nbsp;Debt</h1>
   </section>
   
   <section id="artiststatement">
