--- a/index.html
+++ b/index.html
@@ -33,60 +33,98 @@
     <h1>Fine Print: A Series of Lecture Demonstrations on Student Loan&nbsp;Debt</h1>
   </section>
   
-  <section id="artiststatement">
-    <div class="pieceTitle">
-      BFAMFAPhD / Vicky Virgin, 2019
+  <section id="text">
+    <div class="textContainer">
+      <div class="pieceTitle">
+        BFAMFAPhD / Vicky Virgin, 2019
+      </div>
+      <div class="bodyLayout">
+        <div class="artistStatement">
+          <p>
+            Student loan debt has more than doubled in the last decade, eclipsing almost every other kind of consumer debt in the
+            United States, including credit card debt. Some experts are referring to this crisis as the next housing bubble. And
+            while hedge fund managers speculate over the collapse of the student loan market, students themselves are crushed under
+            the psychic burden of their debts and the dizzying options their government offers for repayment.
+            physicality of stress and offers a sly primer in toxicity.
+          </p>
+          <p>
+            Vicky Virgin’s series of videos uses choreography and location/place to create Fine Print a series of lecture
+            demonstrations that probe the absurdity and indecipherable linguistics of these loan agreements. Harnessing the glossary
+            of loan terms in Susan Jahoda’s ...in which nothing can be finally paid off a glossary of loan terms pertaining to
+            contracts that are signed to go into debt for BFA, MFA or arts related PhD degrees, Virgin’s work dissects the rigorous
+          </p>
+          <p>
+            Class mus leo mattis cras pharetra. Quis aptent mi, placerat nibh praesent. Auctor nostra maecenas urna tristique
+            inceptos penatibus ipsum consectetur euismod accumsan. Congue ornare erat quam imperdiet porttitor nullam dignissim
+            hac platea posuere orci. Cras lacus praesent nisi sollicitudin nisl mus natoque convallis elit taciti odio. Torquent
+            erat, ante justo. Elementum eget sapien parturient iaculis elit sed curabitur lectus? Eget.
+          </p>
+          <p>
+            Porta porttitor ac nec ullamcorper netus sed ligula vestibulum porttitor nostra viverra. Dolor vivamus nisl id. Vel
+            ridiculus magnis orci lorem dictumst orci, faucibus interdum. Amet habitant, dignissim ridiculus duis feugiat duis
+            cras. Inceptos vel cras massa phasellus nibh dictumst posuere accumsan cubilia felis. Torquent diam pellentesque per
+            sociis consequat leo dis. Purus nibh sodales senectus eros blandit inceptos lobortis facilisi.
+          </p>
+          <p>
+            Quam malesuada pharetra imperdiet. Tristique tristique habitasse lobortis. Justo sem id, interdum ridiculus maecenas
+            tristique fusce ornare senectus? Cum sapien sed gravida sit. Consequat ultrices malesuada convallis leo natoque.
+            Rutrum est habitasse penatibus habitant torquent magnis. Posuere hendrerit sagittis molestie odio nec integer enim
+            phasellus litora lacus! Sollicitudin dis dui nostra metus. Ullamcorper magnis fermentum iaculis posuere. Laoreet
+            consequat tellus augue convallis integer fusce. Sociosqu venenatis porta dolor ut, sociis hac aptent quis taciti
+            augue? Vitae sem pellentesque magna est! Venenatis metus eget ridiculus, laoreet mattis!
+          </p>
+          <p>
+            Ullamcorper parturient morbi enim sapien nullam egestas? Habitant dapibus hendrerit senectus dictum accumsan tempor
+            nascetur eleifend aenean consectetur. Nullam non litora cras class est morbi nibh sit, non mus! Morbi massa eget ut
+            interdum dolor facilisis venenatis nostra sed egestas. Arcu fames vestibulum odio ac luctus cursus pellentesque
+            fermentum egestas nisl hac elit. Fermentum duis vulputate accumsan dictum inceptos velit. Amet enim convallis conubia
+            potenti penatibus. Ultricies parturient nisi rhoncus dictum consectetur curabitur morbi sed? Vitae ultricies risus mi.
+            Mauris a cubilia, eget ultrices. Iaculis bibendum est sociosqu habitant auctor! Nascetur turpis sodales pharetra etiam
+            nunc torquent rhoncus.
+          </p>
+          <p>
+            Vestibulum aliquet elementum ut. Donec fames donec laoreet sit aenean interdum? Nulla cras sagittis nascetur
+            ridiculus. Platea vehicula pretium cras dis tortor placerat. Arcu mi feugiat per velit mollis, ad nunc eu amet fames.
+            Eget phasellus dui auctor malesuada mollis erat pellentesque tempor pharetra nullam libero! Dignissim lorem habitasse
+            ultricies, ante penatibus hendrerit? Dictum suspendisse molestie tempor faucibus maecenas dictum luctus interdum. Vel
+            consectetur varius dapibus porttitor risus potenti dolor. Nisl vel arcu fringilla augue volutpat justo tristique
+            sapien. Pharetra pharetra odio leo etiam interdum arcu cum elit facilisis ullamcorper ut penatibus.
+          </p>
+        </div>
+        <div class="loanTerms">
+          <p>
+          Lecture Demonstration #1: Forgiveness
+          Certain circumstances, such as permanent disability, death, bankruptcy, and public service may qualify you to have your
+          loans forgiven, cancelled, or discharged. In addition, if you qualify for one of the following circumstances, you are no
+          longer required to make payments on your student loans: your school admitted you even though you did not have the
+          ability to benefit from the coursework, your school falsely certified your qualifying status, your school falsely signed
+          your promissory note, someone was convicted of stealing your identity and fraudulently taking out a loan in your name
+          that you did not benefit from, your school owes your lender a refund.
+          </p>
+          <p>
+          Lecture Demonstration #2: Partial Financial Hardship
+          An eligibility requirement for the Income-Based Repayment and Pay As You Earn plans. Income-Based Repayment is defined
+          as a circumstance in which the annual amount due on eligible loans, (as calculated under a ten-year Standard Repayment
+          Plan), exceeds fifteen percent of the difference between your adjusted gross income and one hundred and fifty percent of
+          the poverty line for your family size in the state where you live. Pay as you Earn is defined as a circumstance in which
+          the annual amount due on your eligible loans, (as calculated under a ten-year Standard Repayment Plan), exceeds ten
+          percent of the difference between your adjusted gross income and one hundred and fifty percent of the poverty line for
+          your family size in the state where you live. For both plans, the amount due under a ten-year Standard Repayment Plan is
+          calculated based on the greater of the amount owed on your eligible loans when you originally entered repayment, or the
+          amount owed at the time you selected the Income-Based Repayment Plan or Pay As You Earn plan.
+          </p>
+          <p>
+          Lecture Demonstration #3: Default
+          Failure to repay a loan based on the terms agreed to in the promissory note. For most federal student loans, you will
+          default if you have not made a payment in more than two hundred and seventy days. You may experience serious legal
+          consequences if you default. Your lender is required to report the default to at least one national credit bureau. If
+          you default on your account, your lender may sell your debt to another company or collection agency. If that happens,
+          you could be responsible for a different, and higher rate.
+          </p>
+
+        </div>
+      </div>
     </div>
-    <p>
-      Student loan debt has more than doubled in the last decade, eclipsing almost every other kind of consumer debt in the
-      United States, including credit card debt. Some experts are referring to this crisis as the next housing bubble. And
-      while hedge fund managers speculate over the collapse of the student loan market, students themselves are crushed under
-      the psychic burden of their debts and the dizzying options their government offers for repayment.
-      physicality of stress and offers a sly primer in toxicity.
-    </p>
-    <p>
-      Vicky Virgin’s series of videos uses choreography and location/place to create Fine Print a series of lecture
-      demonstrations that probe the absurdity and indecipherable linguistics of these loan agreements. Harnessing the glossary
-      of loan terms in Susan Jahoda’s ...in which nothing can be finally paid off a glossary of loan terms pertaining to
-      contracts that are signed to go into debt for BFA, MFA or arts related PhD degrees, Virgin’s work dissects the rigorous
-    </p>
-    <p>
-      Class mus leo mattis cras pharetra. Quis aptent mi, placerat nibh praesent. Auctor nostra maecenas urna tristique
-      inceptos penatibus ipsum consectetur euismod accumsan. Congue ornare erat quam imperdiet porttitor nullam dignissim
-      hac platea posuere orci. Cras lacus praesent nisi sollicitudin nisl mus natoque convallis elit taciti odio. Torquent
-      erat, ante justo. Elementum eget sapien parturient iaculis elit sed curabitur lectus? Eget.
-    </p>
-    <p>
-      Porta porttitor ac nec ullamcorper netus sed ligula vestibulum porttitor nostra viverra. Dolor vivamus nisl id. Vel
-      ridiculus magnis orci lorem dictumst orci, faucibus interdum. Amet habitant, dignissim ridiculus duis feugiat duis
-      cras. Inceptos vel cras massa phasellus nibh dictumst posuere accumsan cubilia felis. Torquent diam pellentesque per
-      sociis consequat leo dis. Purus nibh sodales senectus eros blandit inceptos lobortis facilisi.
-    </p>
-    <p>
-      Quam malesuada pharetra imperdiet. Tristique tristique habitasse lobortis. Justo sem id, interdum ridiculus maecenas
-      tristique fusce ornare senectus? Cum sapien sed gravida sit. Consequat ultrices malesuada convallis leo natoque.
-      Rutrum est habitasse penatibus habitant torquent magnis. Posuere hendrerit sagittis molestie odio nec integer enim
-      phasellus litora lacus! Sollicitudin dis dui nostra metus. Ullamcorper magnis fermentum iaculis posuere. Laoreet
-      consequat tellus augue convallis integer fusce. Sociosqu venenatis porta dolor ut, sociis hac aptent quis taciti
-      augue? Vitae sem pellentesque magna est! Venenatis metus eget ridiculus, laoreet mattis!
-    </p>
-    <p>
-      Ullamcorper parturient morbi enim sapien nullam egestas? Habitant dapibus hendrerit senectus dictum accumsan tempor
-      nascetur eleifend aenean consectetur. Nullam non litora cras class est morbi nibh sit, non mus! Morbi massa eget ut
-      interdum dolor facilisis venenatis nostra sed egestas. Arcu fames vestibulum odio ac luctus cursus pellentesque
-      fermentum egestas nisl hac elit. Fermentum duis vulputate accumsan dictum inceptos velit. Amet enim convallis conubia
-      potenti penatibus. Ultricies parturient nisi rhoncus dictum consectetur curabitur morbi sed? Vitae ultricies risus mi.
-      Mauris a cubilia, eget ultrices. Iaculis bibendum est sociosqu habitant auctor! Nascetur turpis sodales pharetra etiam
-      nunc torquent rhoncus.
-    </p>
-    <p>
-      Vestibulum aliquet elementum ut. Donec fames donec laoreet sit aenean interdum? Nulla cras sagittis nascetur
-      ridiculus. Platea vehicula pretium cras dis tortor placerat. Arcu mi feugiat per velit mollis, ad nunc eu amet fames.
-      Eget phasellus dui auctor malesuada mollis erat pellentesque tempor pharetra nullam libero! Dignissim lorem habitasse
-      ultricies, ante penatibus hendrerit? Dictum suspendisse molestie tempor faucibus maecenas dictum luctus interdum. Vel
-      consectetur varius dapibus porttitor risus potenti dolor. Nisl vel arcu fringilla augue volutpat justo tristique
-      sapien. Pharetra pharetra odio leo etiam interdum arcu cum elit facilisis ullamcorper ut penatibus.
-    </p>
   </section>
   
 </body>
