Style loan terms

--- a/index.html
+++ b/index.html
@@ -93,33 +93,33 @@
         </div>
         <div class="loanTerms">
           <p>
-          Lecture Demonstration #1: Forgiveness
+          <span class="loanTermHeading">Lecture Demonstration #1: Forgiveness</span>
           Certain circumstances, such as permanent disability, death, bankruptcy, and public service may qualify you to have your
-          loans forgiven, cancelled, or discharged. In addition, if you qualify for one of the following circumstances, you are no
+          loans <b>forgiven</b>, <b>cancelled</b>, or <b>discharged</b>. In addition, if you qualify for one of the following circumstances, you are no
           longer required to make payments on your student loans: your school admitted you even though you did not have the
-          ability to benefit from the coursework, your school falsely certified your qualifying status, your school falsely signed
-          your promissory note, someone was convicted of stealing your identity and fraudulently taking out a loan in your name
+          ability to benefit from the coursework, your school falsely certified your <b>qualifying status</b>, your school falsely signed
+          your <b>promissory note</b>, someone was convicted of stealing your identity and fraudulently taking out a loan in your name
           that you did not benefit from, your school owes your lender a refund.
           </p>
           <p>
-          Lecture Demonstration #2: Partial Financial Hardship
-          An eligibility requirement for the Income-Based Repayment and Pay As You Earn plans. Income-Based Repayment is defined
-          as a circumstance in which the annual amount due on eligible loans, (as calculated under a ten-year Standard Repayment
-          Plan), exceeds fifteen percent of the difference between your adjusted gross income and one hundred and fifty percent of
-          the poverty line for your family size in the state where you live. Pay as you Earn is defined as a circumstance in which
-          the annual amount due on your eligible loans, (as calculated under a ten-year Standard Repayment Plan), exceeds ten
+          <span class="loanTermHeading">Lecture Demonstration #2: Partial Financial Hardship</span>
+          An eligibility requirement for the <b>Income-Based Repayment</b> and <b>Pay As You Earn</b> plans. <b>Income-Based Repayment</b> is defined
+          as a circumstance in which the annual amount due on eligible loans, (as calculated under a ten-year 
+          <b>Standard Repayment Plan </b>), exceeds fifteen percent of the difference between your adjusted gross income and one hundred and fifty percent of
+          the poverty line for your family size in the state where you live. <b>Pay as you Earn</b> is defined as a circumstance in which
+          the annual amount due on your eligible loans, (as calculated under a ten-year <b>Standard Repayment Plan</b>), exceeds ten
           percent of the difference between your adjusted gross income and one hundred and fifty percent of the poverty line for
-          your family size in the state where you live. For both plans, the amount due under a ten-year Standard Repayment Plan is
+          your family size in the state where you live. For both plans, the amount due under a ten-year <b>Standard Repayment Plan</b> is
           calculated based on the greater of the amount owed on your eligible loans when you originally entered repayment, or the
-          amount owed at the time you selected the Income-Based Repayment Plan or Pay As You Earn plan.
+          amount owed at the time you selected the <b>Income-Based Repayment</b> Plan or <b>Pay As You Earn</b> plan.
           </p>
           <p>
-          Lecture Demonstration #3: Default
-          Failure to repay a loan based on the terms agreed to in the promissory note. For most federal student loans, you will
-          default if you have not made a payment in more than two hundred and seventy days. You may experience serious legal
-          consequences if you default. Your lender is required to report the default to at least one national credit bureau. If
-          you default on your account, your lender may sell your debt to another company or collection agency. If that happens,
-          you could be responsible for a different, and higher rate.
+          <span class="loanTermHeading">Lecture Demonstration #3: Default</span>
+          Failure to repay a loan based on the terms agreed to in the <b>promissory note</b>. For most federal student loans, you will
+          <b>default</b> if you have not made a payment in more than two hundred and seventy days. You may experience serious legal
+          consequences if you <b>default</b>. Your lender is required to report the <b>default</b> to at least one national credit bureau. If
+          you <b>default</b> on your account, your lender may sell your debt to another company or collection agency. If that happens,
+          you could be responsible for a different, and <b>higher rate</b>.
           </p>
 
         </div>
