try different highlighted terms

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
           <span class="loanTermHeading">Lecture Demonstration #1: Forgiveness</span>
           Certain circumstances, such as permanent disability, death, bankruptcy, and public service may qualify you to have your
           loans <b>forgiven</b>, <b>cancelled</b>, or <b>discharged</b>. In addition, if you qualify for one of the following circumstances, you are no
-          longer required to make payments on your student loans: your school admitted you even though you did not have the
-          ability to benefit from the coursework, your school falsely certified your <b>qualifying status</b>, your school falsely signed
-          your <b>promissory note</b>, someone was convicted of stealing your identity and fraudulently taking out a loan in your name
-          that you did not benefit from, your school owes your lender a refund.
+          longer required to make payments on your student loans: your school admitted you even though you <b>did not have the
+          ability to benefit from the coursework</b>, your school <b>falsely certified your qualifying status</b>, your school <b>falsely signed
+          your promissory note</b>, someone was convicted of stealing your identity and <b>fraudulently taking out a loan in your name
+          that you did not benefit from</b>, your school owes your lender a refund.
           </p>
           <p>
           <span class="loanTermHeading">Lecture Demonstration #2: Partial Financial Hardship</span>
@@ -115,7 +115,7 @@
           </p>
           <p>
           <span class="loanTermHeading">Lecture Demonstration #3: Default</span>
-          Failure to repay a loan based on the terms agreed to in the <b>promissory note</b>. For most federal student loans, you will
+          Failure to repay a loan based on the terms agreed to in the promissory note. For most federal student loans, you will
           <b>default</b> if you have not made a payment in more than two hundred and seventy days. You may experience serious legal
           consequences if you <b>default</b>. Your lender is required to report the <b>default</b> to at least one national credit bureau. If
           you <b>default</b> on your account, your lender may sell your debt to another company or collection agency. If that happens,
