--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,26 @@
         </a>
       </div>
     </div>
-    <div class="videoContainer centerContainer">
-      <div id="vimeoRenderBox" class="videoInnerContainer">
+    <div class="videoContainer centerContainer forgivenessContainer">
+      <iframe src="https://www.youtube-nocookie.com/embed/IGZBsOPALDo?modestbranding=1" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+        height="100%" width="100%">
+      </iframe>
       </div>
+    </div>
+    <div class="videoContainer centerContainer hardshipContainer">
+      <iframe src="https://www.youtube-nocookie.com/embed/CmH1BH-iCcw?modestbranding=1" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+        height="100%" width="100%">
+      </iframe>
+      </div>
+    </div>
+    <div class="videoContainer centerContainer defaultContainer">
+      <iframe src="https://www.youtube-nocookie.com/embed/JkxBccGqyXQ?modestbranding=1" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen height="100%"
+        width="100%">
+      </iframe>
+    </div>
     </div>
     <h1>Fine Print: A Series of Lecture Demonstrations on Student Loan&nbsp;Debt</h1>
   </section>
