Add artist statement

--- a/src/index.html
+++ b/src/index.html
@@ -34,86 +34,99 @@
         <div class="artistStatement">
           <p>
             Student loan debt has more than doubled in the last decade, eclipsing almost every other kind of consumer debt in the
-            United States, including credit card debt. Some experts are referring to this crisis as the next housing bubble. And
+            United States, including credit card debt.  Some experts are referring to this crisis as the next housing bubble. And
             while hedge fund managers speculate over the collapse of the student loan market, students themselves are crushed under
-            the psychic burden of their debts and the dizzying options their government offers for repayment.
-            physicality of stress and offers a sly primer in toxicity.
+            the burdens of their debts and the dizzying options their government offers for repayment.
           </p>
+
           <p>
-            Vicky Virgin’s series of videos uses choreography and location/place to create Fine Print a series of lecture
-            demonstrations that probe the absurdity and indecipherable linguistics of these loan agreements. Harnessing the glossary
-            of loan terms in Susan Jahoda’s ...in which nothing can be finally paid off a glossary of loan terms pertaining to
-            contracts that are signed to go into debt for BFA, MFA or arts related PhD degrees, Virgin’s work dissects the rigorous
+            Vicky Virgin’s three-part series of lecture demonstrations, <i>Fine Print</i>, probes the absurdity of student loan agreements
+            through precise choreography, carefully-chosen locations and the almost indecipherable linguistics of loan contracts
+            themselves
           </p>
+
           <p>
-            Class mus leo mattis cras pharetra. Quis aptent mi, placerat nibh praesent. Auctor nostra maecenas urna tristique
-            inceptos penatibus ipsum consectetur euismod accumsan. Congue ornare erat quam imperdiet porttitor nullam dignissim
-            hac platea posuere orci. Cras lacus praesent nisi sollicitudin nisl mus natoque convallis elit taciti odio. Torquent
-            erat, ante justo. Elementum eget sapien parturient iaculis elit sed curabitur lectus? Eget.
+            Harnessing the glossary of loan terms used in Susan Jahoda’s
+            <a href="http://bfamfaphd.com/project/in-which-nothing-can-be-finally-paid-off/" target="_blank"><i>&hellip;in which nothing can be finally paid off</i></a>, Virgin’s work
+            explores the arbitrary calculus used to measure a student’s innate worthiness of assistance, the concept of hardship,
+            and financial stress.  The result is a sly primer in systemic toxicity.
           </p>
+
           <p>
-            Porta porttitor ac nec ullamcorper netus sed ligula vestibulum porttitor nostra viverra. Dolor vivamus nisl id. Vel
-            ridiculus magnis orci lorem dictumst orci, faucibus interdum. Amet habitant, dignissim ridiculus duis feugiat duis
-            cras. Inceptos vel cras massa phasellus nibh dictumst posuere accumsan cubilia felis. Torquent diam pellentesque per
-            sociis consequat leo dis. Purus nibh sodales senectus eros blandit inceptos lobortis facilisi.
+            The movement thread throughout <i>Fine Print</i> is a simple arm dance:  an accumulation of shapes that reference the grid of a
+            bar chart of categorical data.  The relentless rhythm of a metronome and the precision of these arm movements conjure a
+            military drill, or the numbing drills of a learning tradition in which a teacher stands in front of a formation of
+            students and dictates what they should learn and the manner in which they should learn it.  The evolution of the
+            arm-dancers&mdash;from lying on the floor, to sitting, to marching&mdash;hints at momentum and transformation, despite a
+            repressive system.
           </p>
+
           <p>
-            Quam malesuada pharetra imperdiet. Tristique tristique habitasse lobortis. Justo sem id, interdum ridiculus maecenas
-            tristique fusce ornare senectus? Cum sapien sed gravida sit. Consequat ultrices malesuada convallis leo natoque.
-            Rutrum est habitasse penatibus habitant torquent magnis. Posuere hendrerit sagittis molestie odio nec integer enim
-            phasellus litora lacus! Sollicitudin dis dui nostra metus. Ullamcorper magnis fermentum iaculis posuere. Laoreet
-            consequat tellus augue convallis integer fusce. Sociosqu venenatis porta dolor ut, sociis hac aptent quis taciti
-            augue? Vitae sem pellentesque magna est! Venenatis metus eget ridiculus, laoreet mattis!
+            The location of each lecture demonstration&mdash;and the manner in which each space was acquired for the project&mdash;was chosen to
+            reflect the tension between pedagogy and capitalism.  <i>#1 Forgiveness</i> is set in a  dance studio inside an historic
+            Brooklyn church which was created by a volunteer community of dancers. Virgin bartered her Excel spreadsheet skills for
+            the cost of the rental.   <i>#2 Partial Financial Hardship</i> is set in an art studio at City As School, the oldest
+            alternative high school in the country, a school whose progressive pedagogy challenges the student-as-vessel status quo.
+             <i>#3 Default</i> is set outside the New York Stock Exchange, the center of financial markets,  in Zucotti Park, birthplace of
+            the Occupy Wall Street movement; and inside the Occulus, the mall-as-monument on the site of the new World Trade Center.
+              At these archetypal financial landmarks, the project comes full circle: the dancers’ drill marks time the way an
+            indebted student marks time, in incremental payments, hostage to the big banks.  
           </p>
+
           <p>
-            Ullamcorper parturient morbi enim sapien nullam egestas? Habitant dapibus hendrerit senectus dictum accumsan tempor
-            nascetur eleifend aenean consectetur. Nullam non litora cras class est morbi nibh sit, non mus! Morbi massa eget ut
-            interdum dolor facilisis venenatis nostra sed egestas. Arcu fames vestibulum odio ac luctus cursus pellentesque
-            fermentum egestas nisl hac elit. Fermentum duis vulputate accumsan dictum inceptos velit. Amet enim convallis conubia
-            potenti penatibus. Ultricies parturient nisi rhoncus dictum consectetur curabitur morbi sed? Vitae ultricies risus mi.
-            Mauris a cubilia, eget ultrices. Iaculis bibendum est sociosqu habitant auctor! Nascetur turpis sodales pharetra etiam
-            nunc torquent rhoncus.
-          </p>
-          <p>
-            Vestibulum aliquet elementum ut. Donec fames donec laoreet sit aenean interdum? Nulla cras sagittis nascetur
-            ridiculus. Platea vehicula pretium cras dis tortor placerat. Arcu mi feugiat per velit mollis, ad nunc eu amet fames.
-            Eget phasellus dui auctor malesuada mollis erat pellentesque tempor pharetra nullam libero! Dignissim lorem habitasse
-            ultricies, ante penatibus hendrerit? Dictum suspendisse molestie tempor faucibus maecenas dictum luctus interdum. Vel
-            consectetur varius dapibus porttitor risus potenti dolor. Nisl vel arcu fringilla augue volutpat justo tristique
-            sapien. Pharetra pharetra odio leo etiam interdum arcu cum elit facilisis ullamcorper ut penatibus.
+            Finally, Virgin’s <i>Fine Print</i> seeks to build a community.  In merging long-time friends from her personal dance community
+            with young dancers new to New York, all committed to various arms of social justice, and in bartering home-cooked meals,
+            wild honey, brain massages and social outings in exchange for labor, Virgin used the project to create spaces for
+            dialogue about indebtedness.  Follow her Arm Dance Movement on Facebook.
+
           </p>
         </div>
         <div class="loanTerms">
           <p>
-          <span class="loanTermHeading">Lecture Demonstration #1: Forgiveness</span>
-          Certain circumstances, such as permanent disability, death, bankruptcy, and public service may qualify you to have your
-          loans <b>forgiven</b>, <b>cancelled</b>, or <b>discharged</b>. In addition, if you qualify for one of the following circumstances, you are no
-          longer required to make payments on your student loans: your school admitted you even though you <b>did not have the
-          ability to benefit from the coursework</b>, your school <b>falsely certified your qualifying status</b>, your school <b>falsely signed
-          your promissory note</b>, someone was convicted of stealing your identity and <b>fraudulently taking out a loan in your name
-          that you did not benefit from</b>, your school owes your lender a refund.
+            <span class="loanTermHeading">Lecture Demonstration #1: Forgiveness</span>
+            Certain circumstances, such as permanent disability, death, bankruptcy, and public service may qualify you to have
+            your
+            loans <b>forgiven</b>, <b>cancelled</b>, or <b>discharged</b>. In addition, if you qualify for one of the following
+            circumstances, you are no
+            longer required to make payments on your student loans: your school admitted you even though you <b>did not have the
+              ability to benefit from the coursework</b>, your school <b>falsely certified your qualifying status</b>, your
+            school <b>falsely signed
+              your promissory note</b>, someone was convicted of stealing your identity and <b>fraudulently taking out a loan in
+              your name
+              that you did not benefit from</b>, your school owes your lender a refund.
           </p>
           <p>
-          <span class="loanTermHeading">Lecture Demonstration #2: Partial Financial Hardship</span>
-          An eligibility requirement for the <b>Income-Based Repayment</b> and <b>Pay As You Earn</b> plans. <b>Income-Based Repayment</b> is defined
-          as a circumstance in which the annual amount due on eligible loans, (as calculated under a ten-year 
-          <b>Standard Repayment Plan </b>), exceeds fifteen percent of the difference between your adjusted gross income and one hundred and fifty percent of
-          the poverty line for your family size in the state where you live. <b>Pay as you Earn</b> is defined as a circumstance in which
-          the annual amount due on your eligible loans, (as calculated under a ten-year <b>Standard Repayment Plan</b>), exceeds ten
-          percent of the difference between your adjusted gross income and one hundred and fifty percent of the poverty line for
-          your family size in the state where you live. For both plans, the amount due under a ten-year <b>Standard Repayment Plan</b> is
-          calculated based on the greater of the amount owed on your eligible loans when you originally entered repayment, or the
-          amount owed at the time you selected the <b>Income-Based Repayment</b> Plan or <b>Pay As You Earn</b> plan.
+            <span class="loanTermHeading">Lecture Demonstration #2: Partial Financial Hardship</span>
+            An eligibility requirement for the <b>Income-Based Repayment</b> and <b>Pay As You Earn</b> plans. <b>Income-Based
+              Repayment</b> is defined
+            as a circumstance in which the annual amount due on eligible loans, (as calculated under a ten-year
+            <b>Standard Repayment Plan </b>), exceeds fifteen percent of the difference between your adjusted gross income and
+            one hundred and fifty percent of
+            the poverty line for your family size in the state where you live. <b>Pay as you Earn</b> is defined as a
+            circumstance in which
+            the annual amount due on your eligible loans, (as calculated under a ten-year <b>Standard Repayment Plan</b>),
+            exceeds ten
+            percent of the difference between your adjusted gross income and one hundred and fifty percent of the poverty line
+            for
+            your family size in the state where you live. For both plans, the amount due under a ten-year <b>Standard Repayment
+              Plan</b> is
+            calculated based on the greater of the amount owed on your eligible loans when you originally entered repayment, or
+            the
+            amount owed at the time you selected the <b>Income-Based Repayment</b> Plan or <b>Pay As You Earn</b> plan.
           </p>
           <p>
-          <span class="loanTermHeading">Lecture Demonstration #3: Default</span>
-          Failure to repay a loan based on the terms agreed to in the promissory note. For most federal student loans, you will
-          <b>default</b> if you have not made a payment in more than two hundred and seventy days. You may experience serious legal
-          consequences if you <b>default</b>. Your lender is required to report the <b>default</b> to at least one national credit bureau. If
-          you <b>default</b> on your account, your lender may sell your debt to another company or collection agency. If that happens,
-          you could be responsible for a different, and <b>higher rate</b>.
+            <span class="loanTermHeading">Lecture Demonstration #3: Default</span>
+            Failure to repay a loan based on the terms agreed to in the promissory note. For most federal student loans, you
+            will
+            <b>default</b> if you have not made a payment in more than two hundred and seventy days. You may experience serious
+            legal
+            consequences if you <b>default</b>. Your lender is required to report the <b>default</b> to at least one national
+            credit bureau. If
+            you <b>default</b> on your account, your lender may sell your debt to another company or collection agency. If that
+            happens,
+            you could be responsible for a different, and <b>higher rate</b>.
           </p>
-
+        
         </div>
       </div>
     </div>
