--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+  <!-- Site by Julian Boilen, julianboilen.com -->
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
