--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,17 @@
 <html>
   <!-- Site by Julian Boilen, julianboilen.com -->
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137604848-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137604848-1');
+  </script>
+  <!-- End Google Analytics -->
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <title>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt</title>
