Revert "Merge branch 'show-titles'"
This reverts commit 4e526a01070ef599ab1af87af2bd102e7f6cdc93, reversing
changes made to 072be498e1db15e0a2e8b2659df03cefdc62adfa.

--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,11 @@
     gtag('config', 'UA-137604848-1');
   </script>
   <!-- End Google Analytics -->
-
-  <!-- typekit -->
-  <script>
-    (function (d) {
-      var config = {
-        kitId: 'kov6lrh',
-        scriptTimeout: 10000,
-        async: false
-      },
-        h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
-    })(document);
-    </script>
-    <!-- end typekit -->
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <title>Fine Print: A Series of Lecture Demonstrations on Student Loan Debt</title>
+  <link rel="stylesheet" href="https://use.typekit.net/kov6lrh.css">
 </head>
 <body>
   <section id="aboveFold" class="videoHidden">
@@ -37,19 +25,16 @@
       <div id="selector">
         <a id="forgivenessLink" href="#" title="Forgiveness">
           <img src="assets/iconsForgiveness.jpg" alt="foregiveness icon" />
-          <span class="linkTitle">#1 Forgiveness</span>
         </a>
         <a id="hardshipLink" href="#" title="Hardship">
           <img src="assets/iconsHardship.jpg" alt="hardship icon" />
-          <span class="linkTitle">#2 Partial Financial Hardship</span>
         </a>
         <a id="defaultLink" href="#" title="Default">
           <img src="assets/iconsDefault.jpg" alt="default icon" />
-          <span class="linkTitle">#3 Default</span>
         </a>
       </div>
     </div>
-    <h1>Fine Print:<br> A Series of Lecture Demonstrations on Student Loan&nbsp;Debt</h1>
+    <h1>Fine Print:<br>A Series of Lecture Demonstrations on Student Loan&nbsp;Debt</h1>
   </section>
   
   <section id="text">
