--- a/src/index.html
+++ b/src/index.html
@@ -46,50 +46,48 @@
         <div class="artistStatement">
           <p>
             Student loan debt has more than doubled in the last decade, eclipsing almost every other kind of consumer debt in the
-            United States, including credit card debt.  Some experts are referring to this crisis as the next housing bubble. And
+            United States, including credit card debt. Some experts are referring to this crisis as the next housing bubble. And
             while hedge fund managers speculate over the collapse of the student loan market, students themselves are crushed under
-            the burdens of their debts and the dizzying options their government offers for repayment.
+            the psychic burdens of their debts and the dizzying options their government offers for repayment.
           </p>
 
           <p>
             Vicky Virgin’s three-part series of lecture demonstrations, <i>Fine Print</i>, probes the absurdity of student loan agreements
-            through precise choreography, carefully-chosen locations and the almost indecipherable linguistics of loan contracts
-            themselves
+            through precise choreography, carefully-chosen locations and the almost indecipherable linguistics of loan contracts themselves.
           </p>
 
           <p>
             Harnessing the glossary of loan terms used in Susan Jahoda’s
             <a href="http://bfamfaphd.com/project/in-which-nothing-can-be-finally-paid-off/" target="_blank"><i>&hellip;in which nothing can be finally paid off</i></a>, Virgin’s work
             explores the arbitrary calculus used to measure a student’s innate worthiness of assistance, the concept of hardship,
-            and financial stress.  The result is a sly primer in systemic toxicity.
+            and financial stress. The result is a sly primer on systemic toxicity.
           </p>
 
           <p>
             The movement thread throughout <i>Fine Print</i> is a simple arm dance:  an accumulation of shapes that reference the grid of a
-            bar chart of categorical data.  The relentless rhythm of a metronome and the precision of these arm movements conjure a
+            bar chart of categorical data. The relentless rhythm of a metronome and the precision of these arm movements conjure a
             military drill, or the numbing drills of a learning tradition in which a teacher stands in front of a formation of
-            students and dictates what they should learn and the manner in which they should learn it.  The evolution of the
+            students and dictates what they should learn and the manner in which they should learn it. The evolution of the
             arm-dancers&mdash;from lying on the floor, to sitting, to marching&mdash;hints at momentum and transformation, despite a
             repressive system.
           </p>
 
           <p>
             The location of each lecture demonstration&mdash;and the manner in which each space was acquired for the project&mdash;was chosen to
-            reflect the tension between pedagogy and capitalism.  <i>#1 Forgiveness</i> is set in a  dance studio inside an historic
-            Brooklyn church which was created by a volunteer community of dancers. Virgin bartered her Excel spreadsheet skills for
-            the cost of the rental.   <i>#2 Partial Financial Hardship</i> is set in an art studio at City As School, the oldest
+            reflect the tension between pedagogy and capitalism. <i>#1 Forgiveness</i> is set in a dance studio created by a volunteer community of dancers inside an historic
+            Brooklyn church. Virgin bartered her Excel spreadsheet skills for
+            the cost of the rental. <i>#2 Partial Financial Hardship</i> is set in an art studio at City As School, the oldest
             alternative high school in the country, a school whose progressive pedagogy challenges the student-as-vessel status quo.
-             <i>#3 Default</i> is set outside the New York Stock Exchange, the center of financial markets,  in Zucotti Park, birthplace of
+             <i>#3 Default</i> is set outside the New York Stock Exchange, the heart of the world markets, in Zucotti Park, birthplace of
             the Occupy Wall Street movement; and inside the Occulus, the mall-as-monument on the site of the new World Trade Center.
-              At these archetypal financial landmarks, the project comes full circle: the dancers’ drill marks time the way an
-            indebted student marks time, in incremental payments, hostage to the big banks.  
+            At these archetypal financial landmarks, the project comes full circle: the dancers’ drill marks time the way an
+            indebted student marks time, in incremental payments, hostage to the big banks. 
           </p>
 
           <p>
-            Finally, Virgin’s <i>Fine Print</i> seeks to build a community.  In merging long-time friends from her personal dance community
+            Finally, Virgin’s <i>Fine Print</i> seeks to build a community. In merging long-time friends from her personal dance community
             with young dancers new to New York, all committed to various arms of social justice, and in bartering home-cooked meals,
-            wild honey, brain massages and social outings in exchange for labor, Virgin used the project to create spaces for
-            dialogue about indebtedness.  Follow her Arm Dance Movement on Facebook.
+            wild honey, brain massages and social outings in exchange for labor, Virgin used the project to spark conversations and deepen connections. Follow her Arm Dance Movement on Facebook.
 
           </p>
         </div>
