--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 <body>
   <section id="aboveFold" class="videoHidden">
     <div class="centerContainer selectorContainer">
+      <div id="back">Back</div>
       <div id="selector">
         <a id="forgivenessLink" href="#" title="Forgiveness">
           <img src="assets/iconsForgiveness.jpg" alt="foregiveness icon" />
